[gd_scene load_steps=9 format=2]

[ext_resource path="res://components/game/OneInfiniteMechanic.gd" type="Script" id=1]
[ext_resource path="res://components/game/Dye.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/scenery/chair_mirror.png" type="Texture" id=3]
[ext_resource path="res://components/game/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://sounds/201159__kiddpark__cash-register.mp3" type="AudioStream" id=5]
[ext_resource path="res://sounds/Timeout.wav" type="AudioStream" id=6]
[ext_resource path="res://sounds/91920__filipe-chagas__cashierreceiptservo.wav" type="AudioStream" id=7]
[ext_resource path="res://components/audio/MultipleAudioStreamPlayer.tscn" type="PackedScene" id=8]

[node name="OneInfiniteMechanic" type="Node2D"]
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( -94, -3 )
scale = Vector2( 4, 4 )

[node name="Chair" type="Sprite" parent="."]
position = Vector2( 58, -137 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="Dye" parent="." instance=ExtResource( 2 )]
position = Vector2( 61, -197 )
scale = Vector2( 4, 4 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -200 )
scale = Vector2( 4, 4 )

[node name="FailSFXPlayer" parent="." instance=ExtResource( 8 )]
streams = [ ExtResource( 6 ) ]

[node name="WinSFXPlayer" parent="." instance=ExtResource( 8 )]
streams = [ ExtResource( 5 ), ExtResource( 7 ) ]

[connection signal="submit" from="Player" to="." method="_on_Player_submit"]
[connection signal="completed" from="Dye" to="." method="_on_Dye_completed"]
